utils submodule, cache fix, LockedException, separate cache alias

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,9 @@ envlist =
 
 
 [testenv]
-commands = {envpython} runtests.py
+commands =
+    {envpython} runtests.py initialize_pph_context
+    {envpython} runtests.py
 
 deps-dev =
     https://www.djangoproject.com/download/1.7c1/tarball/
