use dictionary map as persistent cache store for pph vars

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ envlist =
 
 [testenv]
 commands =
+    rm -rf pph_cache
     {envpython} runtests.py initialize_pph_context
     {envpython} runtests.py
 
