Changed the way the sharenubers are cached.
Sharenumbers are now stored in a database cache

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,9 @@ envlist =
 
 [testenv]
 commands =
+    rm -f test.db
     rm -rf pph_cache
+    {envpython} runtests.py createcachetable share_table
     {envpython} runtests.py initialize_pph_context
     {envpython} runtests.py
 
