--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,16 @@
 [tox]
 envlist =
-    # Django Dev
-    py3.4-djdev,
-    py3.3-djdev,
-    py3.2-djdev,
-    py2.7-djdev,
+    # Django 1.8
+    py3.4-dj1.8,
+    py3.3-dj1.8,
+    py3.2-dj1.8,
+    py2.7-dj1.8,
+
+    # Django 1.7
+    py3.4-dj1.7,
+    py3.3-dj1.7,
+    py3.2-dj1.7,
+    py2.7-dj1.7,
 
     # Django 1.6
     py3.3-dj1.6,
@@ -31,8 +37,11 @@ commands =
     {envpython} runtests.py initialize_pph_context
     {envpython} runtests.py
 
-deps-dev =
-    https://www.djangoproject.com/download/1.7c1/tarball/
+deps-1.8=
+    Django>=1.8
+
+deps-1.7=
+    Django>=1.7,<1.8
 
 deps-1.6 =
     Django>=1.6,<1.7
@@ -43,23 +52,40 @@ deps-1.5 =
 deps-1.4 =
     Django>=1.4,<1.5
 
-
-# Django Dev
-[testenv:py3.4-djdev]
+# Django 1.7
+[testenv:py3.4-dj1.8]
 basepython = python3.4
-deps = {[testenv]deps-dev}
+deps = {[testenv]deps-1.8}
 
-[testenv:py3.3-djdev]
+[testenv:py3.3-dj1.8]
 basepython = python3.3
-deps = {[testenv]deps-dev}
+deps = {[testenv]deps-1.8}
 
-[testenv:py3.2-djdev]
+[testenv:py3.2-dj1.8]
 basepython = python3.2
-deps = {[testenv]deps-dev}
+deps = {[testenv]deps-1.8}
 
-[testenv:py2.7-djdev]
+[testenv:py2.7-dj1.8]
 basepython = python2.7
-deps = {[testenv]deps-dev}
+deps = {[testenv]deps-1.8}
+
+
+# Django 1.7
+[testenv:py3.4-dj1.7]
+basepython = python3.4
+deps = {[testenv]deps-1.7}
+
+[testenv:py3.3-dj1.7]
+basepython = python3.3
+deps = {[testenv]deps-1.7}
+
+[testenv:py3.2-dj1.7]
+basepython = python3.2
+deps = {[testenv]deps-1.7}
+
+[testenv:py2.7-dj1.7]
+basepython = python2.7
+deps = {[testenv]deps-1.7}
 
 
 # Django 1.6
