--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,10 @@
 [tox]
 envlist =
+    # Django 1.9
+    py3.5-dj1.9,
+    py3.4-dj1.9,
+    py2.7-dj1.9,
+
     # Django 1.8
     py3.4-dj1.8,
     py3.3-dj1.8,
@@ -37,6 +42,9 @@ commands =
     {envpython} runtests.py initialize_pph_context
     {envpython} runtests.py
 
+deps-1.9=
+    Django>=1.9
+
 deps-1.8=
     Django>=1.8,<1.9
 
@@ -52,7 +60,21 @@ deps-1.5 =
 deps-1.4 =
     Django>=1.4,<1.5
 
-# Django 1.7
+# Django 1.9
+[testenv:py3.5-dj1.9]
+basepython = python3.5
+deps = {[testenv]deps-1.9}
+
+[testenv:py3.4-dj1.9]
+basepython = python3.4
+deps = {[testenv]deps-1.9}
+
+[testenv:py2.7-dj1.9]
+basepython = python2.7
+deps = {[testenv]deps-1.9}
+
+
+# Django 1.8
 [testenv:py3.4-dj1.8]
 basepython = python3.4
 deps = {[testenv]deps-1.8}
